Introduced connecting UX from header to fixed header relating to first 2 visibile sections. masthead tidy. reduced starting header height.

--- a/client/modules/header/header.import.less
+++ b/client/modules/header/header.import.less
@@ -33,7 +33,7 @@ header.mainHeader{
         .transition(all,375ms,ease-out,0ms); //Previously set to margin, changed to all for margin & transform transition
         will-change: transform, margin; //changed to transform as above
         ul{
-            padding: 225px 0px 65px 0px;
+            padding: 160px 0px 32px 0px;
             .transition(all,375ms,ease-out,0ms); //padding and text-align
             will-change: padding;
             background-color: @white;
@@ -106,11 +106,11 @@ header.mainHeader{
                     position: absolute;
                     left: 50%;
                     margin-left: -200px;
-                    top: 64px;
+                    top: 40px;
                     width: 400px;
                     text-indent: 0px;
                     margin-bottom: 42px;
-                    height: 90px;
+                    height: 70px;
                     a{
                         border: none;
                         display: block;
@@ -123,7 +123,7 @@ header.mainHeader{
                             //width: 400px;
                             //-webkit-backface-visibility: hidden;
                             width: 100%;
-                            height: 90px;
+                            height: 70px;
                             .transition(all,375ms,ease-out,0ms);
                         }
                         &:after{
