--- a/client/modules/header/headerMobile.import.less
+++ b/client/modules/header/headerMobile.import.less
@@ -365,27 +365,3 @@ body.accountOpen.sidebarLeftMobile{
         overflow-y: hidden;
     }
 }
-
-
-
-
-
-
-
-
-
-
-//To be removed, for desktop testing purposes
-body{
-    .full{
-        width: 100%;
-    }
-    .masterContainer{
-        padding-top: 0px;
-    }
-    &.fixedHeader{
-        .masterContainer{
-            padding-top: 0px;
-        }
-    }
-}
