--- a/client/modules/work/work.import.less
+++ b/client/modules/work/work.import.less
@@ -1,5 +1,5 @@
 section.work{
-    background-color: @white;
+    background-color: transparent;
     width: 100%;
     overflow-x: hidden;
     //Work Grid
