--- a/client/theme/less/animations.import.less
+++ b/client/theme/less/animations.import.less
@@ -84,14 +84,14 @@
             left: 50%;
             margin-left: -200px;
             width: 400px;
-            height: 90px;
+            height: 70px;
         }
         50%{
             .translate(0px, -180px);
             left: 50%;
             margin-left: -200px;
             width:400px;
-            height: 90px;
+            height: 70px;
         }
         51%{
             .translate(0px, -180px);
@@ -121,54 +121,6 @@
 }
 
 
-
-
-
-//Logo Animation
-/*.logoAnimateReturn{
-    .animation(logoAnimateReturn, 1, 400ms, ease-out, 0ms);
-    .keyframes(logoAnimateReturn;{
-        0% {
-            .translate(0px, -30px);
-            left: 12px;
-            margin-left: 0px;
-            width: 85px;
-        }
-        30%{
-            .translate(0px, -30px);
-            left: -85px;
-            margin-left: 0px;
-            width: 85px;
-        }
-        31%{
-            .translate(0px, -180px);
-            left: -85px;
-            margin-left: 0px;
-            width: 85px;
-        }
-        32%{
-            .translate(0px, -180px);
-            left: 50%;
-            margin-left: -200px;
-            width: 400px;
-        }
-        55% {
-            left: 50%;
-            margin-left: -200px;
-            top: 40px;
-            width: 400px;
-        }
-        100% {
-            left: 50%;
-            margin-left: -200px;
-            top: 90px;
-            width: 400px;
-        }
-    });
-    @media @mobile{
-        .noAnimation;
-    }
-}*/
 
 
 
